@@ -1,6 +1,7 @@
 DIST_SUBDIRS = source nrc 
 SUBDIRS = nrc source
 
+
 EXTRA_DIST =  globes/globes.h\
 data/CNGS_Spectra.dat data/NUMI12minus.dat\
 data/NUMIminus.dat  data/XCC_CNGS.dat\
@@ -22,6 +23,8 @@ data/MINOS.glb data/NUMI12comb.glb\
 data/NuFact.glb\
 examples/Makefile.in examples/example1.c  examples/example3.c examples/myio.c\
 examples/example-tour.c  examples/example2.c  examples/example4.c\
-examples/myio.h examples/XCC.dat examples/NuFact.glb
+examples/myio.h examples/XCC.dat examples/NuFact.glb\
+BUGS REFERENCES
+
 
 AM_YFLAGS =  -d 
